--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -152,7 +152,7 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 <p><span class="badge badge-light">Loma Linda, California</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/UpliftEducation1/743999691993215-speech-language-pathologist-central-management-office-grand-prairie-arlington-'>Uplift Education Speech Language Pathologist: Central Management Office (Grand Prairie/Arlington) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/UpliftEducation1/743999691993215-speech-language-pathologist-central-management-office-grand-prairie-arlington-'>Uplift Education Speech Language Pathologist: Central Management Office (Grand Prairie/Arlington) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -223,7 +223,7 @@ Reading, Pennsylvania. Review all of the job details and apply today!</p>
 <p>Jul 1, 2019 ... Speech & Language Pathologist. Los Angeles, CA. School Support ? Special 
 Education Support. Full-Time 2019-2020 School Year. Apply for this job.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TheracareINC/743999691525085-speech-language-pathologist'>Theracare INC Speech Language Pathologist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TheracareINC/743999691525085-speech-language-pathologist'>Theracare INC Speech Language Pathologist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -439,7 +439,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<h5><a href='https://careers-lhcgroup.icims.com/jobs/59086/speech-therapist---slp---home-health-%28prn%29/job?in_iframe=1'>Speech Therapist / SLP - Home Health (PRN) in Brookfield, Wisconsin | Careers at Wisconsin Home Health</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-lhcgroup.icims.com/jobs/59086/speech-therapist---slp---home-health-%28prn%29/job?in_iframe=1'>Speech Therapist / SLP - Home Health (PRN) in Brookfield, Wisconsin | Careers at Wisconsin Home Health</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-06-27</p>
 <hr/>
